--- a/scss/layout/_work.scss
+++ b/scss/layout/_work.scss
@@ -1,14 +1,9 @@
 
 
 #section1 {
-  background-color: $dark-blue;
-  padding-bottom: 100px;
-  @media screen and (min-width: 415px) {
-    padding: 0px;
-  }
   .fp-tableCell {
     padding: 25px 0;
-    border-top: 5px solid $shadow-color;
+    @extend %pinkTop;
     vertical-align: top;
     @media screen and (min-width: 415px) {
       padding: 0px;
@@ -18,54 +13,61 @@
 }
 .work-heading {
   max-width: 1200px;
-  background-color: $dark-blue;
   display: flex;
   flex-flow: column;
   justify-content: center;
   @media screen and (min-width: 990px) {
     flex-flow: row;
+    margin: 0 auto;
   }
   #work-image {
     align-self: center;
     width: 150px;
     height: 150px;
     margin: 20px 0;
-    @media screen and (min-width: 990px) {
-      margin: 50px;
+    @media screen and (min-width: 550px) {
       width: 200px;
       height: 200px;
     }
+    @media screen and (min-width: 990px) {
+      margin: 50px;
+      width: 400px;
+      height: auto;
+    }
   }
   .collage {
-    background-color: $dark-blue;
+    width: auto;
     display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    max-height: 700px;
+    flex-flow: column;
+    margin: 0 auto;
+    @media screen and (min-width: 990px) {
+      margin: 50px;
+    }
+    div {
+      padding: 10px;
+      @media screen and (min-width: 990px) {
+        padding: 20px;
+      }
+    }
+    div h2 {
+      font-size: 1.5em;
+      @media screen and (min-width: 990px) {
+        font-size: 2em;
+      }
+    }
+    .work-name:hover {
+      color: $shadow-color;
+      text-decoration: line-through;
+    }
     @media screen and (min-width: 990px) {
       align-content: center;
       width: 700px;
     }
-    img {
-      margin: 15px;
-      border: 2px solid white;
-      width: 150px;
-      height: 150px;
-      @media screen and (min-width: 415px) {
-        width: 300px;
-        height: 300px;
-      }
-      @media screen and (min-width: 990px) {
-        border: 4px solid white;
-      }
-    }
   }
 }
-// .work-content{
-//   display: none;
-// }
+
 .work-content {
-  color: white;
+  color: black;
   flex-flow: column;
   display: flex;
   align-content: center;
@@ -79,7 +81,7 @@
     text-decoration: underline;
     letter-spacing: 2px;
     padding: 15px;
-    color: white;
+    color: black;
     &:hover {
       color: $shadow-color;
     }
