--- a/scss/layout/_nav.scss
+++ b/scss/layout/_nav.scss
@@ -7,7 +7,7 @@
   }
 }
 #menu {
-  background: white;
+  background: $off-white;
   display: flex;
   justify-content: space-around;
   align-items: center;
