--- a/scss/layout/_work.scss
+++ b/scss/layout/_work.scss
@@ -94,6 +94,9 @@
     padding: 15px;
 
   }
+  .info-img {
+    display: flex;
+  }
   img{
     align-self: center;
     width: 200px;
@@ -101,7 +104,6 @@
     margin: 20px 0;
     @media screen and (min-width: 760px) {
       width: 300px;
-      // height: auto;
     }
   }
   span {
