--- a/css/main.css
+++ b/css/main.css
@@ -75,7 +75,7 @@ header .neonSign #hello, header .neonSign #h {
   font-family: "Neon Lights", sans-serif;
   text-shadow: 0px 0px 25px #DC00A0, 20px 0 50px #DC00A0, -20px 0 50px #DC00A0, 0px -18px 70px #DC00A0, 0px 18px 70px #DC00A0; }
 
-#section1 .fp-tableCell {
+#section1 {
   border-top: 5px solid #DC00A0; }
 
 #section2 {
@@ -265,26 +265,49 @@ header {
     margin: 0 auto;
     margin-top: 20px; }
 
-#section1 .fp-tableCell {
-  padding: 25px 0;
-  vertical-align: top; }
-  @media screen and (min-width: 415px) {
-    #section1 .fp-tableCell {
-      padding: 0px;
-      vertical-align: middle; } }
+#section1 {
+  background: url("../img/work1.png") no-repeat;
+  background-position: 50% 10%;
+  background-size: 200px;
+  margin: 0 auto; }
+  @media screen and (min-width: 768px) {
+    #section1 {
+      background-position: 100px center;
+      background-size: 250px; } }
+  @media screen and (min-width: 990px) {
+    #section1 {
+      background-size: 300px;
+      background-position: 200px center; } }
+  @media screen and (min-width: 1200px) {
+    #section1 {
+      background-position: 225px center; } }
+  #section1 .fp-tableCell {
+    padding: 25px 0;
+    vertical-align: top; }
+    @media screen and (min-width: 768px) {
+      #section1 .fp-tableCell {
+        padding: 0px;
+        vertical-align: middle; } }
 
 .work-heading {
-  position: relative;
   max-width: 1200px;
+  position: relative;
   display: flex;
   flex-flow: column;
   justify-content: center; }
+  @media screen and (min-width: 414px) {
+    .work-heading {
+      margin: 0 auto; } }
   @media screen and (min-width: 990px) {
     .work-heading {
       flex-flow: row;
       margin: 0 auto; } }
+  @media screen and (min-width: 990px) {
+    .work-heading .work-image {
+      position: absolute;
+      left: 50px;
+      bottom: 20%; } }
   .work-heading #work-image {
-    align-self: center;
     width: 150px;
     height: 150px;
     margin: 20px 0; }
@@ -301,10 +324,14 @@ header {
     width: auto;
     display: flex;
     flex-flow: column;
-    margin: 0 auto; }
+    margin: 300px auto 0 auto; }
+    @media screen and (min-width: 768px) {
+      .work-heading .collage {
+        margin: 0 auto;
+        margin-left: 375px; } }
     @media screen and (min-width: 990px) {
       .work-heading .collage {
-        margin: 50px; } }
+        margin-left: 500px; } }
     .work-heading .collage div {
       padding: 10px; }
       @media screen and (min-width: 990px) {
@@ -329,6 +356,13 @@ header {
   flex-flow: column;
   display: flex;
   align-content: center; }
+  @media screen and (min-width: 768px) {
+    .work-content {
+      margin: 0 auto;
+      margin-left: 375px; } }
+  @media screen and (min-width: 990px) {
+    .work-content {
+      margin-left: 500px; } }
   .work-content #back {
     font-size: 2em;
     font-family: "DIN Pro Condensed Regular", monospace; }
