--- a/scss/layout/_work.scss
+++ b/scss/layout/_work.scss
@@ -1,26 +1,50 @@
 #section1 {
+    background: url("../img/work1.png") no-repeat;
+    background-position: 50% 10%;
+    background-size: 200px;
+    margin: 0 auto;
+    @extend %pinkTop;
+    @media screen and (min-width: 768px) {
+      background-position: 100px center;
+      background-size: 250px;
+    }
+    @media screen and (min-width: 990px) {
+      background-size: 300px;
+      background-position: 200px center;
+    }
+    @media screen and (min-width: 1200px) {
+      background-position: 225px center;
+    }
   .fp-tableCell {
     padding: 25px 0;
-    @extend %pinkTop;
     vertical-align: top;
-    @media screen and (min-width: 415px) {
+    @media screen and (min-width: 768px) {
       padding: 0px;
       vertical-align: middle;
     }
   }
 }
 .work-heading {
-  position: relative;
   max-width: 1200px;
+  position: relative;
   display: flex;
   flex-flow: column;
   justify-content: center;
+  @media screen and (min-width: 414px) {
+    margin: 0 auto;
+  }
   @media screen and (min-width: 990px) {
     flex-flow: row;
     margin: 0 auto;
   }
+  .work-image {
+    @media screen and (min-width: 990px) {
+      position: absolute;
+      left: 50px;
+      bottom: 20%;
+    }
+  }
   #work-image {
-    align-self: center;
     width: 150px;
     height: 150px;
     margin: 20px 0;
@@ -33,7 +57,7 @@
       margin: 50px;
       width: 400px;
       height: auto;
-      // position: absolute;
+
 
     }
   }
@@ -41,9 +65,14 @@
     width: auto;
     display: flex;
     flex-flow: column;
-    margin: 0 auto;
+    margin: 300px auto 0 auto;
+
+    @media screen and (min-width: 768px) {
+      margin: 0 auto;
+      margin-left: 375px;
+    }
     @media screen and (min-width: 990px) {
-      margin: 50px;
+      margin-left: 500px;
     }
     div {
       padding: 10px;
@@ -74,6 +103,13 @@
   flex-flow: column;
   display: flex;
   align-content: center;
+  @media screen and (min-width: 768px) {
+    margin: 0 auto;
+    margin-left: 375px;
+  }
+  @media screen and (min-width: 990px) {
+    margin-left: 500px;
+  }
   #back {
     font-size: 2em;
     font-family: $font-stack;
