--- a/scss/layout/_contact.scss
+++ b/scss/layout/_contact.scss
@@ -13,7 +13,7 @@
     display: flex;
     justify-content: center;
     @media  screen and (min-width: 760px) {
-      padding-bottom: 20px;
+      padding-top: 20px;
     }
     a {
       padding: 10px 10px 0 10px;
