--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -1,9 +1,10 @@
 ////fonts
 $font-stack: 'DIN Pro Condensed Regular', monospace;
-$text-font: 'Genome Thin', sans-serif;
-$text-light-font: 'Colab Thin', sans-serif;
+$text-font: 'Montserrat Hairline', sans-serif;
+$text-light-font: 'Montserrat Hairline', sans-serif;
 $hello-font: 'Neon Lights', sans-serif;
 $light-font: 'DIN Pro Condensed Light', monospace;
+
 //////colors
 
 $mid-blue: #6683E1;
