--- a/scss/layout/_about.scss
+++ b/scss/layout/_about.scss
@@ -9,8 +9,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 10px;
+  padding: 30px 10px 0px 10px;
   @media screen and (min-width: 990px) {
+    padding: 0px;
     margin-top: 40px;
   }
   #about-heading {
