--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -22,6 +22,8 @@ header {
       @extend %hello;
       animation: blink linear 4s;
        -webkit-animation: blink linear 4s;
+       -moz-animation:    blink linear 4s;
+       -o-animation: blink linear 4s;
       padding: 0;
       @media screen and (min-width: 800px) {
         font-size: 8em;
@@ -31,6 +33,8 @@ header {
       @extend %hello;
       animation: blink2 linear 4s;
       -webkit-animation: blink2 linear 4s;
+      -moz-animation:    blink2 linear 4s;
+      -o-animation: blink2 linear 4s;
       @media screen and (min-width: 800px) {
         font-size: 8em;
       }
